--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -31,5 +31,9 @@ body
 	width: 150px
 .modal
 	display: block
+.modal-price 
+	padding-left: 20px
+	margin-bottom: 0
+	font-size: 24px
 
 @import "media" 
