--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -16,7 +16,9 @@ body
 .pointer 
 	cursor: pointer
 .car-img
-	max-height: 450px
+	height: 50vh
+	min-height: 450px
+	max-height: 600px
 .phone-block 
 	height: 55px
 .phoneNumber
